fixed card/navbar overlap issue with z-index

--- a/punk-api-project/src/App.module.scss
+++ b/punk-api-project/src/App.module.scss
@@ -5,10 +5,12 @@
     position: fixed;
     top:0;
     left:0;
+    z-index: 1;
 }
 
 .BeerContainer {
     margin-top: 75px;
     display: flex;
     flex-wrap: wrap;
+    z-index: 0;
 }
